--- a/package.json
+++ b/package.json
@@ -41,11 +41,14 @@
     "lint": "eslint -c .eslintrc.js --ext .svelte,.js src"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "autoprefixer": "^9.8.5",
     "express": "^4.17.1",
     "postcss-discard-duplicates": "^4.0.2",
     "svelte": "^3.24.0",
+    "svelte-fa": "^2.1.1",
     "svelte-i18n": "^3.0.4",
     "svelte-preprocess": "^4.0.8",
     "svelte-spa-chunk": "^2.0.0",
