--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fullhuman/postcss-purgecss": "^2.3.0",
     "autoprefixer": "^9.8.5",
+    "axios": "^0.19.2",
     "express": "^4.17.1",
     "postcss-discard-duplicates": "^4.0.2",
     "svelte": "^3.24.0",
