--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "autoprefixer": "^9.8.5",
     "axios": "^0.19.2",
     "express": "^4.17.1",
+    "intersection-observer": "^0.11.0",
     "postcss-discard-duplicates": "^4.0.2",
     "svelte": "^3.24.0",
     "svelte-fa": "^2.1.1",
