--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "svelte-fa": "^2.1.1",
     "svelte-i18n": "^3.0.4",
     "svelte-preprocess": "^4.0.10",
+    "svelte-scrollto": "^0.2.0",
     "svelte-spa-chunk": "^2.0.0",
     "svelte-spa-router": "^2.2.0",
     "tailwindcss": "^1.6.2"
