add autocomplete for tag search on infohub

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fullhuman/postcss-purgecss": "^2.3.0",
+    "@yaireo/tagify": "^3.17.7",
     "autoprefixer": "^9.8.6",
     "axios": "^0.19.2",
     "express": "^4.17.1",
