--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
+    "webpack-module-nomodule-plugin": "^0.4.0",
     "webpack-visualizer-plugin": "^0.1.11"
   },
   "scripts": {
