--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
+    "browserslist-useragent-regexp": "^2.1.0",
     "copy-webpack-plugin": "^6.0.3",
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.1",
@@ -53,6 +54,7 @@
     "@yaireo/tagify": "^3.17.7",
     "autoprefixer": "^9.8.6",
     "axios": "^0.19.2",
+    "browser-update": "^3.3.21",
     "core-js": "^3.6.5",
     "express": "^4.17.1",
     "intersection-observer": "^0.11.0",
@@ -73,11 +75,7 @@
     }
   },
   "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "ios >= 9",
-    "not dead",
-    "ie >= 11"
+    "cover 99.5% and not dead and supports css-grid and supports flexbox and supports css-sticky and not ie <= 11, unreleased versions"
   ],
   "lint-staged": {
     "*.{js,svelte}": [
