--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-modules": "^0.1.3",
+    "@tailwindcss/custom-forms": "^0.2.1",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
@@ -34,6 +35,7 @@
     "sass-loader": "^10.0.0",
     "style-loader": "^1.2.1",
     "svelte-loader": "2.13.6",
+    "tailwind-color-alpha": "^1.0.4",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0",
@@ -60,8 +62,10 @@
     "intersection-observer": "^0.11.0",
     "postcss-discard-duplicates": "^4.0.2",
     "svelte": "^3.24.1",
+    "svelte-awesome": "^2.3.0",
     "svelte-fa": "^2.1.1",
     "svelte-i18n": "^3.0.4",
+    "svelte-loadable": "^1.5.0",
     "svelte-preprocess": "^4.1.1",
     "svelte-scrollto": "^0.2.0",
     "svelte-spa-chunk": "^2.0.0",
