--- a/package.json
+++ b/package.json
@@ -2,75 +2,75 @@
   "name": "nwoun-homepage-index",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/core": "^7.13.13",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
     "@babel/preset-modules": "^0.1.4",
     "@tailwindcss/custom-forms": "^0.2.1",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.3.0",
-    "babel-loader": "^8.1.0",
-    "browserslist-useragent-regexp": "^2.1.0",
-    "copy-webpack-plugin": "^6.0.4",
-    "cross-env": "^7.0.2",
-    "css-loader": "^4.2.2",
-    "eslint": "^7.7.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-svelte3": "^2.7.3",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.4.1",
-    "husky": "^4.2.5",
-    "jest": "^26.4.2",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "browserslist-useragent-regexp": "^3.0.0",
+    "copy-webpack-plugin": "^8.1.0",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.0",
+    "eslint": "^7.23.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-svelte3": "^3.1.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "husky": "^5.2.0",
+    "jest": "^26.6.3",
     "jest-transform-svelte": "^2.1.1",
-    "lint-staged": "^10.2.13",
-    "mini-css-extract-plugin": "^0.11.0",
-    "node-sass": "^4.14.1",
-    "npm-check-updates": "^8.0.1",
-    "postcss-custom-properties": "^9.1.1",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-nested": "^4.2.3",
-    "sass": "^1.26.10",
-    "sass-loader": "^10.0.1",
-    "style-loader": "^1.2.1",
-    "svelte-loader": "2.13.6",
+    "lint-staged": "^10.5.4",
+    "mini-css-extract-plugin": "^1.4.0",
+    "node-sass": "^5.0.0",
+    "npm-check-updates": "^11.3.0",
+    "postcss-custom-properties": "^11.0.0",
+    "postcss-import": "^14.0.0",
+    "postcss-load-config": "^3.0.1",
+    "postcss-loader": "^5.2.0",
+    "postcss-nested": "^5.0.5",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "svelte-loader": "smittyvb/svelte-loader#update-virtual-modules",
     "tailwind-color-alpha": "^1.0.4",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-module-nomodule-plugin": "^0.4.0",
-    "webpack-visualizer-plugin": "^0.1.11"
+    "webpack": "^5.28.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-module-nomodule-plugin": "^1.0.1"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack-dev-server --open",
+    "dev": "webpack serve  --port 8081",
     "test": "jest --coverage --runInBand",
     "lint": "eslint -c .eslintrc.js --ext .svelte,.js src"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.11.2",
-    "@fortawesome/free-brands-svg-icons": "^5.14.0",
-    "@fortawesome/free-solid-svg-icons": "^5.14.0",
-    "@fullhuman/postcss-purgecss": "^2.3.0",
-    "@yaireo/tagify": "^3.17.10",
-    "autoprefixer": "^9.8.6",
-    "axios": "^0.20.0",
-    "browser-update": "^3.3.21",
-    "core-js": "^3.6.5",
+    "@babel/runtime-corejs3": "^7.13.10",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fullhuman/postcss-purgecss": "^4.0.3",
+    "@yaireo/tagify": "^3.23.1",
+    "autoprefixer": "^10.2.5",
+    "axios": "^0.21.1",
+    "browser-update": "^3.3.28",
+    "core-js": "^3.9.1",
     "express": "^4.17.1",
-    "intersection-observer": "^0.11.0",
+    "intersection-observer": "^0.12.0",
     "postcss-discard-duplicates": "^4.0.2",
-    "svelte": "^3.24.1",
+    "svelte": "^3.35.0",
     "svelte-awesome": "^2.3.0",
-    "svelte-fa": "^2.1.1",
-    "svelte-i18n": "^3.0.4",
-    "svelte-loadable": "^1.5.0",
-    "svelte-preprocess": "^4.2.0",
+    "svelte-fa": "^2.2.0",
+    "svelte-i18n": "^3.3.9",
+    "svelte-loadable": "^1.5.1",
+    "svelte-preprocess": "^4.7.0",
     "svelte-scrollto": "^0.2.0",
     "svelte-spa-chunk": "^2.0.0",
-    "svelte-spa-router": "^2.2.0",
-    "tailwindcss": "^1.7.6"
+    "svelte-spa-router": "^3.1.0",
+    "tailwindcss": "^2.0.4"
   },
   "husky": {
     "hooks": {
