--- a/package.json
+++ b/package.json
@@ -2,74 +2,74 @@
   "name": "nwoun-homepage-index",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/plugin-transform-runtime": "^7.14.5",
-    "@babel/preset-env": "^7.14.8",
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
     "@tailwindcss/forms": "^0.3.3",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.0.6",
+    "babel-jest": "^27.2.1",
     "babel-loader": "^8.2.2",
     "browserslist-useragent-regexp": "^3.0.0",
     "copy-webpack-plugin": "^9.0.1",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.2.0",
-    "eslint": "^7.31.0",
+    "css-loader": "^6.3.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-svelte3": "^3.2.0",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-svelte3": "^3.2.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.1",
-    "jest": "^27.0.6",
+    "husky": "^7.0.2",
+    "jest": "^27.2.1",
     "jest-transform-svelte": "^2.1.1",
-    "lint-staged": "^11.1.0",
-    "mini-css-extract-plugin": "^2.1.0",
+    "lint-staged": "^11.1.2",
+    "mini-css-extract-plugin": "^2.3.0",
     "node-sass": "^6.0.1",
-    "npm-check-updates": "^11.8.3",
-    "postcss": "^8.3.6",
-    "postcss-custom-properties": "^11.0.0",
+    "npm-check-updates": "^11.8.5",
+    "postcss": "^8.3.7",
+    "postcss-custom-properties": "^12.0.0",
     "postcss-import": "^14.0.2",
     "postcss-load-config": "^3.1.0",
     "postcss-loader": "^6.1.1",
-    "postcss-nested": "^5.0.5",
-    "sass": "^1.35.2",
+    "postcss-nested": "^5.0.6",
+    "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
+    "style-loader": "^3.3.0",
     "svelte-loader": "^3.1.2",
     "tailwind-color-alpha": "^1.0.4",
-    "webpack": "^5.46.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.2.1"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack serve",
+    "dev": "webpack serve --port 8087",
     "test": "jest --coverage --runInBand",
     "lint": "eslint -c .eslintrc.js --ext .svelte,.js src"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.14.8",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@babel/runtime-corejs3": "^7.15.4",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fullhuman/postcss-purgecss": "^4.0.3",
-    "@yaireo/tagify": "^4.5.0",
-    "autoprefixer": "^10.3.1",
-    "axios": "^0.21.1",
+    "@yaireo/tagify": "^4.8.0",
+    "autoprefixer": "^10.3.5",
+    "axios": "^0.21.4",
     "browser-update": "^3.3.30",
-    "core-js": "^3.15.2",
+    "core-js": "^3.18.0",
     "express": "^4.17.1",
     "intersection-observer": "^0.12.0",
     "postcss-discard-duplicates": "^5.0.1",
-    "svelte": "^3.40.0",
+    "svelte": "^3.43.0",
     "svelte-awesome": "^2.3.2",
-    "svelte-fa": "^2.2.1",
-    "svelte-i18n": "^3.3.9",
+    "svelte-fa": "^2.3.3",
+    "svelte-i18n": "^3.3.10",
     "svelte-loadable": "^1.5.1",
-    "svelte-preprocess": "^4.7.4",
+    "svelte-preprocess": "^4.9.5",
     "svelte-scrollto": "^0.2.0",
     "svelte-spa-chunk": "^2.0.0",
     "svelte-spa-router": "^3.2.0",
-    "tailwindcss": "^2.2.6"
+    "tailwindcss": "^2.2.15"
   },
   "browserslist": [
     "cover 99.5% and not dead and supports css-grid and supports flexbox and supports css-sticky and not ie <= 11, unreleased versions"
@@ -78,5 +78,6 @@
     "*.{js,svelte}": [
       "yarn lint"
     ]
-  }
+  },
+  "packageManager": "yarn@3.1.0-rc.6"
 }
