--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "axios": "^0.21.4",
     "browser-update": "^3.3.30",
     "core-js": "^3.18.0",
+    "date-fns": "^2.24.0",
     "express": "^4.17.1",
     "intersection-observer": "^0.12.0",
     "postcss-discard-duplicates": "^5.0.1",
