--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jest-transform-svelte": "^2.1.1",
     "lint-staged": "^11.1.2",
     "mini-css-extract-plugin": "^2.3.0",
+    "node-gyp": "^8.2.0",
     "node-sass": "^6.0.1",
     "npm-check-updates": "^11.8.5",
     "postcss": "^8.3.8",
