--- a/package.json
+++ b/package.json
@@ -65,8 +65,9 @@
     "axios": "^0.21.4",
     "browser-update": "^3.3.30",
     "chart.js": "^3.5.1",
+    "chartjs-adapter-date-fns": "^2.0.0",
     "core-js": "^3.18.1",
-    "date-fns": "^2.24.0",
+    "date-fns": "^2.25.0",
     "express": "^4.17.1",
     "intersection-observer": "^0.12.0",
     "postcss-discard-duplicates": "^5.0.1",
