move logic for outdated browsers into index.template.html to avoid situations in which the logic itself can't be run because the browser throws errors

--- a/package.json
+++ b/package.json
@@ -63,13 +63,11 @@
     "@yaireo/tagify": "^4.8.1",
     "autoprefixer": "^10.3.6",
     "axios": "^0.21.4",
-    "browser-update": "^3.3.30",
     "chart.js": "^3.5.1",
     "chartjs-adapter-date-fns": "^2.0.0",
     "core-js": "^3.18.1",
     "date-fns": "^2.25.0",
     "express": "^4.17.1",
-    "intersection-observer": "^0.12.0",
     "postcss-discard-duplicates": "^5.0.1",
     "svelte": "^3.43.0",
     "svelte-awesome": "^2.3.2",
@@ -83,7 +81,7 @@
     "tailwindcss": "^2.2.16"
   },
   "browserslist": [
-    "cover 99.5% and not dead and supports css-grid and supports flexbox and supports css-sticky and not ie <= 11, unreleased versions"
+    "defaults and supports css-grid and supports flexbox and supports css-sticky and supports es6-module and supports es6-module-dynamic-import, not opera > 0, not samsung > 0, not and_qq > 0"
   ],
   "lint-staged": {
     "*.{js,svelte}": [
