--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "description": "nwo-uncensored.com hompegae based on Svelte and Tailwind",
+  "description": "nwo-uncensored.com homepaga based on Svelte and Tailwind",
   "version": "1.0.0",
   "license": "GPL-3.0-or-later",
   "authors": [
@@ -9,45 +9,45 @@
     }
   ],
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@babel/plugin-transform-runtime": "^7.15.0",
-    "@babel/preset-env": "^7.15.6",
-    "@tailwindcss/forms": "^0.3.3",
+    "@babel/core": "^7.19.0",
+    "@babel/plugin-transform-runtime": "^7.18.10",
+    "@babel/preset-env": "^7.19.0",
+    "@tailwindcss/forms": "^0.5.3",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.2.2",
-    "babel-loader": "^8.2.2",
-    "browserslist-useragent-regexp": "^3.0.1",
-    "copy-webpack-plugin": "^9.0.1",
+    "babel-jest": "^29.0.2",
+    "babel-loader": "^8.2.5",
+    "browserslist-useragent-regexp": "^3.0.2",
+    "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.3.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-svelte3": "^3.2.1",
+    "css-loader": "^6.7.1",
+    "eslint": "^8.23.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-svelte3": "^4.0.0",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.3.2",
-    "husky": "^7.0.2",
-    "jest": "^27.2.2",
+    "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.1",
+    "jest": "^29.0.2",
     "jest-transform-svelte": "^2.1.1",
-    "lint-staged": "^11.1.2",
-    "mini-css-extract-plugin": "^2.3.0",
-    "node-gyp": "^8.2.0",
-    "node-sass": "^6.0.1",
-    "npm-check-updates": "^11.8.5",
-    "postcss": "^8.3.8",
-    "postcss-custom-properties": "^12.0.0",
-    "postcss-import": "^14.0.2",
-    "postcss-load-config": "^3.1.0",
-    "postcss-loader": "^6.1.1",
+    "lint-staged": "^13.0.3",
+    "mini-css-extract-plugin": "^2.6.1",
+    "node-gyp": "^9.1.0",
+    "node-sass": "^7.0.1",
+    "npm-check-updates": "^16.1.0",
+    "postcss": "^8.4.16",
+    "postcss-custom-properties": "^12.1.8",
+    "postcss-import": "^15.0.0",
+    "postcss-load-config": "^4.0.1",
+    "postcss-loader": "^7.0.1",
     "postcss-nested": "^5.0.6",
-    "sass": "^1.42.1",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.3.0",
-    "svelte-loader": "^3.1.2",
+    "sass": "^1.54.8",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "svelte-loader": "^3.1.3",
     "tailwind-color-alpha": "^1.0.4",
-    "webpack": "^5.54.0",
-    "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.3.0"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.0"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
@@ -56,29 +56,30 @@
     "lint": "eslint -c .eslintrc.js --ext .svelte,.js src"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.15.4",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fullhuman/postcss-purgecss": "^4.0.3",
-    "@yaireo/tagify": "^4.8.1",
-    "autoprefixer": "^10.3.6",
-    "axios": "^0.21.4",
-    "chart.js": "^3.5.1",
+    "@babel/runtime-corejs3": "^7.19.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
+    "@fullhuman/postcss-purgecss": "^4.1.3",
+    "@yaireo/tagify": "^4.16.4",
+    "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "chartjs-adapter-date-fns": "^2.0.0",
-    "core-js": "^3.18.1",
-    "date-fns": "^2.25.0",
-    "express": "^4.17.1",
-    "postcss-discard-duplicates": "^5.0.1",
-    "svelte": "^3.43.0",
-    "svelte-awesome": "^2.3.2",
-    "svelte-fa": "^2.3.3",
-    "svelte-i18n": "^3.3.10",
-    "svelte-loadable": "^1.5.1",
-    "svelte-preprocess": "^4.9.5",
+    "chartjs-plugin-trendline": "^2.0.0",
+    "core-js": "^3.25.0",
+    "date-fns": "^2.29.2",
+    "express": "^4.18.1",
+    "postcss-discard-duplicates": "^5.1.0",
+    "svelte": "^3.50.0",
+    "svelte-awesome": "^3.0.0",
+    "svelte-fa": "^3.0.3",
+    "svelte-i18n": "^3.4.0",
+    "svelte-loadable": "^2.0.1",
+    "svelte-preprocess": "^4.10.7",
     "svelte-scrollto": "^0.2.0",
     "svelte-spa-chunk": "^2.0.0",
-    "svelte-spa-router": "^3.2.0",
-    "tailwindcss": "^2.2.16"
+    "svelte-spa-router": "^3.3.0",
+    "tailwindcss": "^3.1.8"
   },
   "browserslist": [
     "defaults and supports css-grid and supports flexbox and supports css-sticky and supports es6-module and supports es6-module-dynamic-import, not opera > 0, not samsung > 0, not and_qq > 0"
