--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "chart.js": "^3.9.1",
     "chartjs-adapter-date-fns": "^2.0.0",
     "chartjs-plugin-trendline": "^2.0.0",
+    "color": "^4.2.3",
     "core-js": "^3.25.0",
     "date-fns": "^2.29.2",
     "express": "^4.18.1",
