--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
   },
   "dependencies": {
     "@babel/runtime-corejs3": "^7.19.0",
+    "@easepick/core": "^1.2.0",
+    "@easepick/range-plugin": "^1.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fullhuman/postcss-purgecss": "^4.1.3",
