--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.19.0",
+    "@babel/eslint-parser": "^7.18.9",
     "@babel/plugin-transform-runtime": "^7.18.10",
     "@babel/preset-env": "^7.19.0",
     "@tailwindcss/forms": "^0.5.3",
-    "babel-eslint": "^10.1.0",
     "babel-jest": "^29.0.3",
     "babel-loader": "^8.2.5",
     "browserslist-useragent-regexp": "^3.0.2",
@@ -21,7 +21,8 @@
     "cross-env": "^7.0.3",
     "css-loader": "^6.7.1",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "^8.23.0",
+    "env-cmd": "^10.1.0",
+    "eslint": "^8.23.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -51,8 +52,9 @@
     "webpack-dev-server": "^4.11.0"
   },
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack serve --port 8087",
+    "build": "env-cmd cross-env NODE_ENV=production webpack",
+    "build:vercel": "cross-env NODE_ENV=production webpack",
+    "dev": "env-cmd webpack serve --port 8087",
     "test": "jest --coverage --runInBand",
     "lint": "eslint -c .eslintrc.js --ext .svelte,.js src"
   },
@@ -79,10 +81,26 @@
     "svelte-i18n": "^3.4.0",
     "svelte-loadable": "^2.0.1",
     "svelte-preprocess": "^4.10.7",
-    "svelte-scrollto": "^0.2.0",
     "svelte-spa-chunk": "^2.0.0",
     "svelte-spa-router": "^3.3.0",
     "tailwindcss": "^3.1.8"
+  },
+  "resolutions": {
+    "svelte": "^3.50.1",
+    "minimist": "^1.2.6",
+    "json-schema": "^0.4.0",
+    "terser": "^5.14.2",
+    "ansi-regex": "^5.0.1",
+    "lodash": "^4.17.21",
+    "follow-redirects": "^1.14.8",
+    "tar": "^6.1.9",
+    "glob-parent": "^5.1.2",
+    "ssri": "^8.0.1",
+    "ini": "^1.3.6",
+    "path-parse": "^1.0.7",
+    "color-string": "^1.5.5",
+    "browserslist": "^4.16.5",
+    "hosted-git-info": "^2.8.9"
   },
   "browserslist": [
     "defaults and supports css-grid and supports flexbox and supports css-sticky and supports es6-module and supports es6-module-dynamic-import, not opera > 0, not samsung > 0, not and_qq > 0"
