--- a/package.json
+++ b/package.json
@@ -9,47 +9,46 @@
     }
   ],
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/eslint-parser": "^7.18.9",
-    "@babel/plugin-transform-runtime": "^7.18.10",
-    "@babel/preset-env": "^7.19.0",
+    "@babel/core": "^7.20.12",
+    "@babel/eslint-parser": "^7.19.1",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
     "@tailwindcss/forms": "^0.5.3",
-    "babel-jest": "^29.0.3",
-    "babel-loader": "^8.2.5",
-    "browserslist-useragent-regexp": "^3.0.2",
+    "babel-jest": "^29.3.1",
+    "babel-loader": "^9.1.2",
+    "browserslist-useragent-regexp": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.7.1",
+    "css-loader": "^6.7.3",
     "dotenv-webpack": "^8.0.1",
     "env-cmd": "^10.1.0",
-    "eslint": "^8.23.1",
+    "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.27.4",
     "eslint-plugin-svelte3": "^4.0.0",
-    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^8.0.1",
-    "jest": "^29.0.3",
+    "husky": "^8.0.3",
+    "jest": "^29.3.1",
     "jest-transform-svelte": "^2.1.1",
-    "lint-staged": "^13.0.3",
-    "mini-css-extract-plugin": "^2.6.1",
-    "node-gyp": "^9.1.0",
-    "node-sass": "^7.0.3",
-    "npm-check-updates": "^16.1.2",
-    "postcss": "^8.4.16",
-    "postcss-custom-properties": "^12.1.8",
-    "postcss-import": "^15.0.0",
+    "lint-staged": "^13.1.0",
+    "mini-css-extract-plugin": "^2.7.2",
+    "node-gyp": "^9.3.1",
+    "node-sass": "^8.0.0",
+    "npm-check-updates": "^16.6.2",
+    "postcss": "^8.4.21",
+    "postcss-custom-properties": "^12.1.11",
+    "postcss-import": "^15.1.0",
     "postcss-load-config": "^4.0.1",
-    "postcss-loader": "^7.0.1",
-    "postcss-nested": "^5.0.6",
-    "sass": "^1.54.9",
-    "sass-loader": "^13.0.2",
+    "postcss-loader": "^7.0.2",
+    "postcss-nested": "^6.0.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
-    "svelte-loader": "^3.1.3",
+    "svelte-loader": "^3.1.4",
     "tailwind-color-alpha": "^1.0.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.0"
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   },
   "scripts": {
     "build": "env-cmd cross-env NODE_ENV=production webpack",
@@ -59,35 +58,35 @@
     "lint": "eslint -c .eslintrc.js --ext .svelte,.js src"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.19.0",
+    "@babel/runtime-corejs3": "^7.20.7",
     "@easepick/core": "^1.2.0",
     "@easepick/range-plugin": "^1.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.0",
-    "@fortawesome/free-solid-svg-icons": "^6.2.0",
-    "@yaireo/tagify": "^4.16.4",
-    "autoprefixer": "^10.4.9",
-    "axios": "^0.27.2",
-    "chart.js": "^3.9.1",
-    "chartjs-adapter-date-fns": "^2.0.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@yaireo/tagify": "^4.17.6",
+    "autoprefixer": "^10.4.13",
+    "axios": "^1.2.2",
+    "chart.js": "^4.1.2",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "chartjs-plugin-trendline": "^2.0.0",
     "color": "^4.2.3",
-    "core-js": "^3.25.1",
-    "date-fns": "^2.29.2",
-    "express": "^4.18.1",
+    "core-js": "^3.27.1",
+    "date-fns": "^2.29.3",
+    "express": "^4.18.2",
     "postcss-discard-duplicates": "^5.1.0",
     "regexparam": "^2.0.1",
-    "svelte": "^3.50.1",
-    "svelte-awesome": "^3.0.0",
+    "svelte": "^3.55.1",
+    "svelte-awesome": "^3.0.1",
     "svelte-fa": "^3.0.3",
-    "svelte-i18n": "^3.4.0",
+    "svelte-i18n": "^3.6.0",
     "svelte-loadable": "^2.0.1",
-    "svelte-preprocess": "^4.10.7",
+    "svelte-preprocess": "^5.0.0",
     "svelte-spa-chunk": "^2.0.0",
     "svelte-spa-router": "^3.3.0",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.2.4"
   },
   "resolutions": {
-    "svelte": "^3.50.1",
+    "svelte": "^3.55.1",
     "minimist": "^1.2.6",
     "json-schema": "^0.4.0",
     "terser": "^5.14.2",
@@ -111,5 +110,5 @@
       "yarn lint"
     ]
   },
-  "packageManager": "yarn@3.1.0-rc.8"
+  "packageManager": "yarn@3.3.1"
 }
