--- a/package.json
+++ b/package.json
@@ -1,114 +1,102 @@
 {
-  "description": "gond.tools homepage based on Svelte and Tailwind",
-  "version": "1.0.0",
-  "license": "GPL-3.0-or-later",
-  "authors": [
-    {
-      "name": "j0Shi82",
-      "email": "j0shi.webdev@gmail.com"
-    }
-  ],
-  "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@babel/eslint-parser": "^7.19.1",
-    "@babel/plugin-transform-runtime": "^7.19.6",
-    "@babel/preset-env": "^7.20.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "babel-jest": "^29.3.1",
-    "babel-loader": "^9.1.2",
-    "browserslist-useragent-regexp": "^4.0.0",
-    "copy-webpack-plugin": "^11.0.0",
-    "cross-env": "^7.0.3",
-    "css-loader": "^6.7.3",
-    "dotenv-webpack": "^8.0.1",
-    "env-cmd": "^10.1.0",
-    "eslint": "^8.31.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.4",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "husky": "^8.0.3",
-    "jest": "^29.3.1",
-    "jest-transform-svelte": "^2.1.1",
-    "lint-staged": "^13.1.0",
-    "mini-css-extract-plugin": "^2.7.2",
-    "node-gyp": "^9.3.1",
-    "node-sass": "^8.0.0",
-    "npm-check-updates": "^16.6.2",
-    "postcss": "^8.4.21",
-    "postcss-custom-properties": "^12.1.11",
-    "postcss-import": "^15.1.0",
-    "postcss-load-config": "^4.0.1",
-    "postcss-loader": "^7.0.2",
-    "postcss-nested": "^6.0.0",
-    "sass": "^1.57.1",
-    "sass-loader": "^13.2.0",
-    "style-loader": "^3.3.1",
-    "svelte-loader": "^3.1.4",
-    "tailwind-color-alpha": "^1.0.4",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.11.1"
-  },
-  "scripts": {
-    "build": "env-cmd cross-env NODE_ENV=production webpack",
-    "build:vercel": "cross-env NODE_ENV=production webpack",
-    "dev": "env-cmd webpack serve --port 8087",
-    "test": "jest --coverage --runInBand",
-    "lint": "eslint -c .eslintrc.js --ext .svelte,.js src"
-  },
-  "dependencies": {
-    "@babel/runtime-corejs3": "^7.20.7",
-    "@easepick/core": "^1.2.0",
-    "@easepick/range-plugin": "^1.2.0",
-    "@fortawesome/free-brands-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@yaireo/tagify": "^4.17.6",
-    "autoprefixer": "^10.4.13",
-    "axios": "^1.2.2",
-    "chart.js": "^4.1.2",
-    "chartjs-adapter-date-fns": "^3.0.0",
-    "chartjs-plugin-trendline": "^2.0.0",
-    "color": "^4.2.3",
-    "core-js": "^3.27.1",
-    "date-fns": "^2.29.3",
-    "express": "^4.18.2",
-    "postcss-discard-duplicates": "^5.1.0",
-    "regexparam": "^2.0.1",
-    "svelte": "^3.55.1",
-    "svelte-awesome": "^3.0.1",
-    "svelte-fa": "^3.0.3",
-    "svelte-i18n": "^3.6.0",
-    "svelte-loadable": "^2.0.1",
-    "svelte-preprocess": "^5.0.0",
-    "svelte-spa-chunk": "^2.0.0",
-    "svelte-spa-router": "^3.3.0",
-    "tailwindcss": "^3.2.4"
-  },
-  "resolutions": {
-    "svelte": "^3.55.1",
-    "minimist": "^1.2.6",
-    "json-schema": "^0.4.0",
-    "terser": "^5.14.2",
-    "ansi-regex": "^5.0.1",
-    "lodash": "^4.17.21",
-    "follow-redirects": "^1.14.8",
-    "tar": "^6.1.9",
-    "glob-parent": "^5.1.2",
-    "ssri": "^8.0.1",
-    "ini": "^1.3.6",
-    "path-parse": "^1.0.7",
-    "color-string": "^1.5.5",
-    "browserslist": "^4.16.5",
-    "hosted-git-info": "^2.8.9"
-  },
-  "browserslist": [
-    "defaults and supports css-grid and supports flexbox and supports css-sticky and supports es6-module and supports es6-module-dynamic-import, not opera > 0, not samsung > 0, not and_qq > 0"
-  ],
-  "lint-staged": {
-    "*.{js,svelte}": [
-      "yarn lint"
-    ]
-  },
-  "packageManager": "yarn@3.3.1"
+    "description": "gond.tools homepage based on Svelte and Tailwind",
+    "version": "1.0.0",
+    "license": "GPL-3.0-or-later",
+    "authors": [
+        {
+            "name": "j0Shi82",
+            "email": "j0shi.webdev@gmail.com"
+        }
+    ],
+    "devDependencies": {
+        "@babel/core": "^7.21.4",
+        "@babel/eslint-parser": "^7.21.3",
+        "@babel/plugin-transform-runtime": "^7.21.4",
+        "@babel/preset-env": "^7.21.4",
+        "@tailwindcss/forms": "^0.5.3",
+        "babel-jest": "^29.5.0",
+        "babel-loader": "^9.1.2",
+        "browserslist-useragent-regexp": "^4.0.0",
+        "copy-webpack-plugin": "^11.0.0",
+        "cross-env": "^7.0.3",
+        "css-loader": "^6.7.3",
+        "dotenv-webpack": "^8.0.1",
+        "env-cmd": "^10.1.0",
+        "eslint": "^8.37.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-svelte3": "^4.0.0",
+        "html-webpack-plugin": "^5.5.0",
+        "husky": "^8.0.3",
+        "jest": "^29.5.0",
+        "jest-transform-svelte": "^2.1.1",
+        "lint-staged": "^13.2.0",
+        "mini-css-extract-plugin": "^2.7.5",
+        "node-gyp": "^9.3.1",
+        "node-sass": "^8.0.0",
+        "npm-check-updates": "^16.9.0",
+        "postcss": "^8.4.21",
+        "postcss-custom-properties": "^13.1.4",
+        "postcss-import": "^15.1.0",
+        "postcss-load-config": "^4.0.1",
+        "postcss-loader": "^7.1.0",
+        "postcss-nested": "^6.0.1",
+        "sass": "^1.60.0",
+        "sass-loader": "^13.2.2",
+        "style-loader": "^3.3.2",
+        "stylelint": "^15.4.0",
+        "stylelint-config-prettier": "^9.0.5",
+        "stylelint-config-recommended-scss": "^9.0.1",
+        "stylelint-config-standard-scss": "^7.0.1",
+        "svelte-loader": "^3.1.7",
+        "tailwind-color-alpha": "^1.0.4",
+        "webpack": "^5.77.0",
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.13.2"
+    },
+    "scripts": {
+        "build": "env-cmd cross-env NODE_ENV=production webpack",
+        "build:vercel": "cross-env NODE_ENV=production webpack",
+        "dev": "env-cmd webpack serve --port 8087",
+        "test": "jest --coverage --runInBand",
+        "lint": "eslint -c .eslintrc.js --ext .svelte,.js src"
+    },
+    "dependencies": {
+        "@babel/runtime-corejs3": "^7.21.0",
+        "@easepick/core": "^1.2.1",
+        "@easepick/range-plugin": "^1.2.1",
+        "@fortawesome/free-brands-svg-icons": "^6.4.0",
+        "@fortawesome/free-solid-svg-icons": "^6.4.0",
+        "@yaireo/tagify": "^4.17.7",
+        "autoprefixer": "^10.4.14",
+        "axios": "^1.3.4",
+        "chart.js": "^4.2.1",
+        "chartjs-adapter-date-fns": "^3.0.0",
+        "chartjs-plugin-trendline": "^2.0.1",
+        "color": "^4.2.3",
+        "core-js": "^3.29.1",
+        "date-fns": "^2.29.3",
+        "express": "^4.18.2",
+        "postcss-discard-duplicates": "^6.0.0",
+        "regexparam": "^2.0.1",
+        "svelte": "^3.58.0",
+        "svelte-awesome": "^3.2.0",
+        "svelte-fa": "^3.0.3",
+        "svelte-i18n": "^3.6.0",
+        "svelte-loadable": "^2.0.1",
+        "svelte-preprocess": "^5.0.3",
+        "svelte-spa-chunk": "^2.0.0",
+        "svelte-spa-router": "^3.3.0",
+        "tailwindcss": "^3.3.1"
+    },
+    "browserslist": [
+        "defaults and supports css-grid and supports flexbox and supports css-sticky and supports es6-module and supports es6-module-dynamic-import, not opera > 0, not samsung > 0, not and_qq > 0"
+    ],
+    "lint-staged": {
+        "*.{js,svelte}": [
+            "yarn lint"
+        ]
+    },
+    "packageManager": "yarn@3.5.0"
 }
