--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
         "postcss-load-config": "^4.0.1",
         "postcss-loader": "^7.1.0",
         "postcss-nested": "^6.0.1",
+        "prettier": "^2.8.7",
+        "prettier-plugin-svelte": "^2.10.0",
         "sass": "^1.60.0",
         "sass-loader": "^13.2.2",
         "style-loader": "^3.3.2",
