--- a/package.json
+++ b/package.json
@@ -12,39 +12,26 @@
     "devDependencies": {
         "@sveltejs/vite-plugin-svelte": "^3.1.1",
         "@tailwindcss/forms": "^0.5.7",
-        "browserslist-useragent-regexp": "^4.1.3",
-        "copy-webpack-plugin": "^12.0.2",
-        "cross-env": "^7.0.3",
-        "css-loader": "^7.1.2",
-        "dotenv-webpack": "^8.1.0",
-        "env-cmd": "^10.1.0",
         "eslint": "^9.4.0",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-svelte3": "^4.0.0",
-        "html-webpack-plugin": "^5.6.0",
-        "husky": "^9.0.11",
-        "jest-transform-svelte": "^2.1.1",
-        "lint-staged": "^15.2.5",
-        "mini-css-extract-plugin": "^2.9.0",
-        "npm-check-updates": "^16.14.20",
         "postcss": "^8.4.38",
         "postcss-custom-properties": "^13.3.10",
+        "postcss-html": "^1.7.0",
         "postcss-import": "^16.1.0",
         "postcss-load-config": "^6.0.1",
         "postcss-loader": "^8.1.1",
         "postcss-nested": "^6.0.1",
+        "postcss-scss": "^4.0.9",
         "prettier": "^3.3.1",
         "prettier-plugin-svelte": "^3.2.4",
         "sass": "^1.77.4",
-        "sass-loader": "^14.2.1",
-        "style-loader": "^4.0.0",
         "stylelint": "^16.6.1",
-        "stylelint-config-prettier": "^9.0.5",
+        "stylelint-config-html": "^1.1.0",
         "stylelint-config-recommended-scss": "^14.0.0",
         "stylelint-config-standard-scss": "^13.1.0",
-        "svelte-loader": "^3.2.3",
         "tailwind-color-alpha": "^1.0.4",
         "vite": "^5.2.13"
     },
